# MOB_CW1

Ld/: test.py
install/: local_setup.sh  setup.sh
install/Stage/lib/: libstage.so.4.3.0
install/Stage/lib/cmake/Stage/: stage-config.cmake
install/Stage/lib/pkgconfig/: stage.pc
install/Stage/share/Stage/: package.dsv  package.sh
install/maps/: map_1729003034.pgm  map_1729003034.yaml
install/motion_test/lib/motion_test/: motion
install/motion_test/share/motion_test/: package.dsv  package.sh
install/pf_localisation/local/lib/python3.10/dist-packages/pf_localisation-3.0.0-py3.10.egg-info/: SOURCES.txt
install/pf_localisation/share/ament_index/resource_index/package_run_dependencies/: pf_localisation
install/pf_localisation/share/pf_localisation/: local_setup.sh  package.dsv  package.sh
install/pf_localisation/share/pf_localisation/cmake/: pf_localisationConfig.cmake
install/socspioneer/lib/socspioneer/: marker_publisher  twist_publisher
install/socspioneer/share/socspioneer/: package.dsv  package.sh  package.xml
install/socspioneer/share/socspioneer/config/: demo.rviz  map_view.rviz
install/socspioneer/share/socspioneer/launch/: keyboard_teleop.launch.py  stage.launch.py  stage_mapping.launch.py  transform_example.launch.py
install/stage_ros2/lib/stage_ros2/: stage_ros2
install/stage_ros2/share/stage_ros2/: package.dsv  package.sh
log/: latest_build
src/motion_test/: package.xml  setup.py
src/motion_test/motion_test/: sub.py
