<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://wwww.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>socspioneer</name>
  <version>3.0.0</version>
  <description>SOCSPioneer packages with simulation support.</description>

  <license>MIT</license>
  <author email="sxs1412@bham.ac.uk">Saif Sidhik</author>
  <author>Mark Rowan</author>

  <maintainer email="s2186366@ed.ac.uk">Alexander Alderman Webb</maintainer>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
